<resources>
    <string name="app_name">Firebase1</string>
    <string name="sign">Sign</string>
    <string name="register">Register</string>
    <string name="signui">Sign with UI</string>
    <string name="session_message">Iniciando sesion</string>
    <string name="username">Nombre de usuario</string>
    <string name="mail">Correo electronico</string>
    <string name="provider">Proveedor</string>
    <string name="uuid">UUID</string>
</resources>
